Fix card__img overflow on small screens

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -25,6 +25,7 @@
 .card__img {
   text-align: center;
   .gatsby-image-wrapper {
+    max-width: 100%;  
     box-shadow: $shadow-stripe;     
   }  
 }
